[package]
name = "advent-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
priority-queue = "1.3.0"
reqwest = { version = "0.11.13", features = ["blocking"] }
serde = "1.0.150"
serde_json = "1.0.89"
